--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
    "version": "1.0.0",
    "description": "",
   "scripts": {
-      "build": "echo \"No build specified\" && exit 1",
+      "build": "echo go build" && exit 1",
       "test": "echo \"No test specified\" && exit 1",
-      "start": "node index.js"
+      "start": "go run ."
     },
    "repository": {
      "type": "git",
