--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
       "build": "echo go build .",
       "test": "echo \"No test specified\" && exit 1",
-      "start": "./youtube"
+      "start": "echo ./youtube"
     },
    "repository": {
      "type": "git",
